--- a/client/css/all.css
+++ b/client/css/all.css
@@ -1,11 +1,12 @@
 * {margin: 0px; padding: 0px; vertical-align: middle; touch-action: manipulation;}
 
-html, body {height: 100%; text-align: center; background: #f6f6f6; font-family: Arial; font-size: 16px; -webkit-user-select: none;}
-canvas {position: relative; display: inline-block; vertical-align: middle;}
+html, body {height: 100%; text-align: center; background: #f6f6f6; font-family: Arial; font-size: 16px; -webkit-user-select: none; overflow: hidden;}
+canvas {position: relative; display: inline-block; vertical-align: middle; -webkit-transform: translate3d(0,0,0);}
 
-.btn {position: relative; display: inline-block; padding: 1em; margin: 0.5em; text-decoration: none; background-color: #ccc; border: 1px solid #ccc;}
+.btn {position: relative; display: inline-block; padding: 1em; margin: 0.5em; text-decoration: none; background-color: #ccc; border: 1px solid #ccc; cursor: pointer;}
 
-.lobby {position: relative; display: block; padding: 10px; margin: 10px;}
+/* Inicio [versao_1] */
+.lobby {position: relative; display: inline-block; padding: 10px; margin: 10px;}
 .salas {position: relative; display: block; padding: 5px; margin: 2px;}
 .salas .sala {position: relative; display: inline-block; margin: 0.2em;}
 .salas .sala .lugares {position: relative; display: block; position: relative; display: inline-block; padding: 30px; margin: 0px; min-width: 120px; min-height: 120px; border: 1px solid #ccc;}
@@ -19,10 +20,10 @@ canvas {position: relative; display: inline-block; vertical-align: middle;}
 .sala .opts {position: relative; display: block; background-color: #444; border: 1px solid #000;}
 .sala .opts span {position: relative; display: inline-block; padding: 0.5em; margin: 0.1em; background-color: #eee; cursor: pointer;}
 
-.carta {position: relative; display: inline-block; margin: 2px; background-color: #fff; border: 1px solid #ddd; cursor: pointer;}
-.carta .ind {position: absolute; display: inline-block; left: 5%; top: 5%; font-size: 18px; font-weight: bold;}
+.carta {position: relative; display: inline-block; margin: 2px; background-color: #fff; border: 1px solid #ddd; cursor: pointer; z-index: 2; -webkit-transform: translate3d(0,0,0);}
+.carta .ind {position: absolute; display: inline-block; left: 5%; top: 5%; font-size: 18px; font-weight: bold; z-index: 3; -webkit-transform: translate3d(0,0,0);}
 
-.jogo {position: relative; display: block; width: 100%; height: 100%;}
+.jogo {position: relative; display: block; height: 100%;}
 
 .players {position: relative; display: inline-block;}
 .players .player {position: relative; display: inline-block; padding: 5px; margin: 5px; background-color: #fff; border: 1px solid #eee; cursor: pointer;}
@@ -39,7 +40,7 @@ canvas {position: relative; display: inline-block; vertical-align: middle;}
 .mesa .carta {margin: -1px;}
 .deck {position: relative; display: inline-block; cursor: pointer;}
 /*.deck .num, .mesa .num {position: absolute; display: inline-block; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); padding: 0.2em 0.3em; color: #fff; background-color: #444; border-radius: 50%;}*/
-.deck .num, .mesa .num {position: absolute; display: inline-block; top: 0; right: 0; padding: 0.3em; color: #444; font-size: 14px; background-color: #ff0; border: 1px solid #e4e43c; border-radius: 50%;}
+.deck .num, .mesa .num {position: absolute; display: inline-block; top: 0; right: 0; padding: 0.3em; color: #444; font-size: 14px; background-color: #ff0; border: 1px solid #e4e43c; border-radius: 50%; z-index: 3;}
 /*
 .mesa {position: absolute; display: inline-block; top: 50%; left: 50%; -webkit-transform: translate(-160%, -50%); width: 70px; height: 110px; background-color: #EFEFEF; border: 1px solid #E2E2E2; cursor: pointer;}
 .mesa .carta {margin: 0;}
@@ -50,15 +51,14 @@ canvas {position: relative; display: inline-block; vertical-align: middle;}
 
 .mesa_deck {position: absolute; display: inline-block; width: 100% !important;  overflow: auto; -webkit-overflow-scrolling: touch;}
 .player_deck {position: absolute; display: inline-block; width: 100% !important; height: 100%; overflow: auto; -webkit-overflow-scrolling: touch;}
+.player_deck .grupo {position: relative; display: inline-block; height: 110px; margin: 5px;}
 .player_jogo_deck {position: absolute; display: inline-block; width: 100% !important; overflow: auto; -webkit-overflow-scrolling: touch;}
 
-.player_deck .grupo {position: relative; display: inline-block; height: 110px; margin: 5px;}
-
-.other_jogos {position: absolute; display: block; width: 100%; height: 50%; top: 0; text-align: left; background-color: #FFF7F7; overflow: auto;}
-.player_jogos {position: absolute; display: block; width: 100%; height: 50%; top: 50%; text-align: left; background-color: #F7FEFF; overflow: auto;}
+.other_jogos {position: absolute; display: block; width: 100%; height: 50%; top: 0; text-align: left; background-color: #FFF7F7; overflow: auto; -webkit-overflow-scrolling: touch;}
+.player_jogos {position: absolute; display: block; width: 100%; height: 50%; top: 50%; text-align: left; background-color: #F7FEFF; overflow: auto; -webkit-overflow-scrolling: touch;}
 .player_jogos .baixado, .other_jogos .baixado {position: relative; display: inline-block; margin: 4px; height: 90px;}
 
-.player_jogos .label {position: absolute; display: inline-block; top: 0; right: 10%; padding: 0.2em; font-size: 14px; background-color: #ff0; border: 1px solid #e4e43c;}
+.player_jogos .label, .other_jogos .label {position: absolute; display: inline-block; top: 0; right: 10%; padding: 0.2em; font-size: 14px; background-color: #ff0; border: 1px solid #e4e43c; z-index: 3;}
 
 .destaque {border: 1px solid #00ff00 !important;}
 .destaque::after {position: absolute; content: ''; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 255, 0, 1); opacity: 0.1;}
@@ -76,6 +76,30 @@ canvas {position: relative; display: inline-block; vertical-align: middle;}
 .menu_adm_opt > .ui-dialog-titlebar { display: none;}
 .menu_adm_opt > .ui-dialog-content {padding: 0;}
 .ui-widget-overlay {background-color: #fff; opacity: 0.8;}
+/* Fim [versao_1] */
+
+/* Inicio [versao_2] */
+.btn_float {float: right;}
+.btn_adm {padding: 0.4em;}
+.players {position: absolute; top: 50%; left: 0; -webkit-transform: translateY(-50%);}
+.meio {position: absolute; display: inline-block; width: 100% !important; height: 13%; top: 0; left: 0; background-color: #1FAB90; overflow: auto; -webkit-overflow-scrolling: touch;}
+.meio .wrap {position: absolute; display: inline-block; right: 0; top: 0; padding: 0;}
+.other_jogos {position: absolute; display: block; width: 100%; height: 30%; top: 13%; left: 0; text-align: left; background-color: #1FAB90; border: 1px solid #3D9080; overflow: auto;}
+.player_jogos {position: absolute; display: block; width: 100%; height: 37%; top: 43%; left: 0; text-align: left; background-color: #1FAB90; border: 1px solid #3D9080; overflow: auto;}
+.player_deck {position: absolute; display: inline-block; width: 100% !important; height: 20%; bottom: 0; left: 0; overflow: auto; background:#438175; -webkit-overflow-scrolling: touch;}
+
+.meio {position: relative; display: block; width: inherit !important; height: 13%; top: 0;}
+.other_jogos {position: relative; display: block; width: inherit !important; height: 30%; top: 0;}
+.player_jogos {position: relative; display: block; width: inherit !important; height: 37%; top: 0;}
+.player_deck {position: relative; display: block; width: inherit !important; height: 20%; top: 0;}
+/* Fim [versao_2] */
+
+
+@media (max-height: 725px) {
+	.meio {height: 18%;}
+	.other_jogos{height: 25%;}
+}
+
 
 @media (max-width: 725px) {
 }
