--- a/client/css/all.css
+++ b/client/css/all.css
@@ -37,7 +37,7 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 
 .meio {position: absolute; display: inline-block; width: 100% !important; height: 100%; overflow: auto; -webkit-overflow-scrolling: touch;}
 .meio .wrap {position: relative; display: block; padding: 5px;}
-.mesa {position: relative; display: inline-block; width: 70px; height: 110px; background-color: #EFEFEF; border: 1px solid #E2E2E2; cursor: pointer;}
+.mesa {position: relative; display: inline-block; width: 70px; height: 110px; margin: 0 4px; background-color: #EFEFEF; border: 1px solid #E2E2E2; cursor: pointer;}
 .mesa .carta {margin: -1px;}
 .deck {position: relative; display: inline-block; cursor: pointer;}
 /*.deck .num, .mesa .num {position: absolute; display: inline-block; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); padding: 0.2em 0.3em; color: #fff; background-color: #444; border-radius: 50%;}*/
