--- a/client/css/all.css
+++ b/client/css/all.css
@@ -37,7 +37,7 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 
 .meio {position: absolute; display: inline-block; width: 100% !important; height: 100%; overflow: auto; -webkit-overflow-scrolling: touch;}
 .meio .wrap {position: relative; display: block; padding: 5px;}
-.mesa {position: relative; display: inline-block; width: 70px; height: 110px; margin: 0 4px; background-color: #EFEFEF; border: 1px solid #E2E2E2; cursor: pointer;}
+.mesa {position: relative; display: inline-block; width: 70px; height: 110px; margin: 0 4px; background-color: #EFEFEF; border: 1px solid #E2E2E2; cursor: pointer; z-index: 2;}
 .mesa .carta {margin: -1px;}
 .deck {position: relative; display: inline-block; cursor: pointer;}
 /*.deck .num, .mesa .num {position: absolute; display: inline-block; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); padding: 0.2em 0.3em; color: #fff; background-color: #444; border-radius: 50%;}*/
@@ -93,8 +93,10 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 .player_jogos .jogo_suja, .other_jogos .jogo_suja {color: #531313; background-color: #ff7373; border: 1px solid #bf4545;}
 
 .btn_float {float: right;}
-.btn_adm {padding: 0.4em;}
-.players {position: absolute; top: 50%; left: 0; -webkit-transform: translateY(-50%);}
+.btn_adm {padding: 0.4em; margin: 0 5px; top: 50%; -webkit-transform: translateY(-50%); vertical-align: top;}
+.players {position: absolute; top: 0; left: 0; height: 100%; z-index: 3;}
+.players::before {position: absolute; content: ''; top: 0; left: 0; width: 100%; height: 100%; background: #1FAB90; opacity: 0.7;}
+.players .player {margin: 0 5px; top: 50%; -webkit-transform: translateY(-50%); vertical-align: top;}
 .meio {position: absolute; display: inline-block; width: 100% !important; height: 13%; top: 0; left: 0; background-color: #1FAB90; overflow: auto; -webkit-overflow-scrolling: touch;}
 .meio .wrap {position: absolute; display: inline-block; right: 0; top: 0; padding: 0;}
 .other_jogos {position: absolute; display: block; width: 100%; height: 30%; top: 13%; left: 0; text-align: left; background-color: #1FAB90; border: 1px solid #3D9080; overflow: auto;}
