--- a/client/css/all.css
+++ b/client/css/all.css
@@ -71,7 +71,7 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 .editar_deck_janela .grupo_controle input {display: block;}
 .editar_deck_janela .grupo_preview {position: relative; display: inline-block;}
 
-.lightbox {position: absolute; display: inline-block; padding: 1em; font-size: 20px; font-weight: bold; color: #444; background-color: #ffffff; border: 1px solid #ccc;}
+.lightbox {position: absolute; display: inline-block; padding: 1em; font-size: 1em; font-weight: bold; color: #444; background-color: #ffffff; border: 1px solid #ccc;}
 
 .menu_adm {position: absolute; display: inline-block;}
 .menu_adm_opt > .ui-dialog-titlebar { display: none;}
@@ -99,14 +99,24 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 .players .player {margin: 0 5px; top: 50%; -webkit-transform: translateY(-50%); vertical-align: top;}
 .meio {position: absolute; display: inline-block; width: 100% !important; height: 13%; top: 0; left: 0; background-color: #1FAB90; overflow: auto; -webkit-overflow-scrolling: touch;}
 .meio .wrap {position: absolute; display: inline-block; right: 0; top: 0; padding: 0;}
-.other_jogos {position: absolute; display: block; width: 100%; height: 30%; top: 13%; left: 0; text-align: left; background-color: #1FAB90; border: 1px solid #3D9080; overflow: auto;}
-.player_jogos {position: absolute; display: block; width: 100%; height: 37%; top: 43%; left: 0; text-align: left; background-color: #1FAB90; border: 1px solid #3D9080; overflow: auto;}
+.other_jogos {position: absolute; display: block; width: 100%; height: 30%; top: 13%; left: 0; text-align: left; background-color: #1FAB90; border-top: 1px solid #3D9080; overflow: auto;}
+.player_jogos {position: absolute; display: block; width: 100%; height: 37%; top: 43%; left: 0; text-align: left; background-color: #1FAB90; border-top: 1px solid #3D9080; overflow: auto;}
 .player_deck {position: absolute; display: inline-block; width: 100% !important; height: 20%; bottom: 0; left: 0; padding-top: 5px; overflow: auto; background:#438175; -webkit-overflow-scrolling: touch;}
 
 .meio {position: relative; display: block; width: inherit !important; height: 13%; top: 0;}
 .other_jogos {position: relative; display: block; width: inherit !important; height: 33%; top: 0;}
 .player_jogos {position: relative; display: block; width: inherit !important; height: 34%; top: 0;}
 .player_deck {position: relative; display: block; width: inherit !important; height: 20%; top: 0;}
+
+#resumo {min-width: 700px; overflow: auto;}
+.resumo {position: relative; width: 100%; font-size: 16px;}
+.resumo .resumo_head td {padding: 10px; color: #4366a2; background: #ecf3ff; border: 1px solid #c1d1ec;}
+.resumo .resumo_body td {padding: 10px; border-bottom: 1px solid #eee;}
+.resumo .resumo_body td.pos {color: #37ba37; background: #ecffec; border-color: #c2f6c2;}
+.resumo .resumo_body td.neg {color: #ff0000; background: #ffe4e4; border-color: #f5d0d0;}
+
+.btn_azul {color: #fff; background: #4285f4; border-color: #274d8c;}
+.btn_vermelho {color: #fff; background: #ed3232; border-color: #7e2424;}
 /* Fim [versao_2] */
 
 
