--- a/client/css/all.css
+++ b/client/css/all.css
@@ -30,6 +30,7 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 
 .carta {position: relative; display: inline-block; margin: 2px; background-color: #fff; border: 1px solid #ddd; cursor: pointer; z-index: 2; -webkit-transform: translate3d(0,0,0); transition: all 0.1s;}
 .carta .ind {position: absolute; display: inline-block; left: 5%; top: 5%; font-size: 18px; font-weight: bold; z-index: 3; -webkit-transform: translate3d(0,0,0);}
+.carta .joker_css {width: 5px; word-wrap: break-word; font-weight: bold;}
 
 .jogo {position: relative; display: block; height: 100%; background: #438175;}
 
@@ -94,6 +95,9 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 .load .hearts {position: relative; display: inline-block; padding: 25px; background: url(/client/imgs/hearts.svg) no-repeat center; animation: load 1s ease-in-out infinite; animation-delay: 0.6s;}
 .load .clubs {position: relative; display: inline-block; padding: 25px; background: url(/client/imgs/clubs.svg) no-repeat center; animation: load 1s ease-in-out infinite; animation-delay: 0.8s;}
 
+.out_joker {position: relative; display: block; text-align: left; margin-left: 35px;}
+.out_feltro {position: relative; display: block; text-align: left; margin-left: 35px;}
+
 @keyframes load {
   0%, 25% {
     -webkit-transform: scale(1);
@@ -152,6 +156,21 @@ canvas {position: relative; display: inline-block; vertical-align: middle; -webk
 .btn_vermelho {color: #fff !important; background: #ed3232 !important; border-color: #7e2424 !important;}
 /* Fim [versao_2] */
 
+/* Inicio [switch] */
+/* The switch - the box around the slider */
+.switch {position: relative; display: inline-block; width: 60px; height: 34px;}
+/* Hide default HTML checkbox */
+.switch input {opacity: 0; width: 0; height: 0;}
+/* The slider */
+.slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; transition: all 0.4s;}
+.slider:before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: white; transition: all 0.4s;}
+input:checked + .slider {background-color: #2196F3;}
+input:focus + .slider {box-shadow: 0 0 1px #2196F3;}
+input:checked + .slider:before {-webkit-transform: translateX(26px);}
+/* Rounded sliders */
+.slider.round {border-radius: 34px;}
+.slider.round:before {border-radius: 50%;}
+/* Fim [switch] */
 
 @media (max-height: 725px) {
 	.meio {height: 18%;}
